keine lust mehr

--- a/Seminar-LinkedData/sigproc.bib
+++ b/Seminar-LinkedData/sigproc.bib
@@ -48,3 +48,36 @@
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
 } 
+
+@inproceedings{related_9,
+ author = {Cohen, William W. and Borgida, Alex and Hirsh, Haym},
+ title = {Computing Least Common Subsumers in Description Logics},
+ booktitle = {Proceedings of the Tenth National Conference on Artificial Intelligence},
+ series = {AAAI'92},
+ year = {1992},
+ isbn = {0-262-51063-4},
+ location = {San Jose, California},
+ pages = {754--760},
+ numpages = {7},
+ url = {http://dl.acm.org/citation.cfm?id=1867135.1867252},
+ acmid = {1867252},
+ publisher = {AAAI Press},
+} 
+
+@article{related_10,
+  title={Learning the Classic Description Logic: Theoretical and Experimental Results.},
+  author={Cohen, William W and Hirsh, Haym},
+  journal={KR},
+  volume={94},
+  pages={121--133},
+  year={1994}
+}
+
+@incollection{related_7,
+  title={A refinement operator for description logics},
+  author={Badea, Liviu and Nienhuys-Cheng, Shan-Hwei},
+  booktitle={Inductive logic programming},
+  pages={40--59},
+  year={2000},
+  publisher={Springer}
+}
