--- a/Seminar-LinkedData/src/related.tex
+++ b/Seminar-LinkedData/src/related.tex
@@ -1,8 +1,18 @@
 \section{Related Work}
-- more \cite{paper1}
-
-- more \cite{paper2}
-
-- more \cite{refinement1,refinement2,refinement3}
-
-- more \cite{Foundation_ILP}
+Related work can be divided into two categories: the first part covers
+supervised machine learning with OWL, the second part is focused on
+(semi-)automated ontology engineering methods.
+\\
+Early work of supervised learning in description logic was published in
+\cite{related_9,related_10}, which uses the so called \emph{least common
+subsumer} to solve the learning problem. Later work invented the concept of the
+refinement operator to solve the problem in a top-down
+approach.\cite{related_7} The refinement operator was later adapted for
+description logic \cite{refinement1,refinement2,refinement3} and is used as described in
+CELOE.
+\\
+The starting point of (semi-)automatic ontology engineering was set by
+\cite{rleated_31}, a formal concept analysis was descibed in \cite{related_5}.
+Another interesting approach is presented in \cite{related_relexo} which
+proposes to improve knowlege bases through relation exploration. It is
+implemented in the RELExO framework.
