--- a/Seminar-LinkedData/sigproc.bib
+++ b/Seminar-LinkedData/sigproc.bib
@@ -81,3 +81,27 @@
   year={2000},
   publisher={Springer}
 }
+
+@INPROCEEDINGS{related_relexo,
+    author = {Johanna Völker and Sebastian Rudolph},
+    title = { Fostering web intelligence by semi-automatic owl ontology refinement},
+    year = {2008},
+    publisher = {IEEE}
+}
+
+@INPROCEEDINGS{related_5,
+    author = {Franz Baader and Bernhard Ganter and Baris Sertkaya and Ulrike Sattler},
+    title = {Completing description logic knowledge bases using formal concept analysis},
+    booktitle = {In Proc. of IJCAI 2007},
+    year = {2007},
+    pages = {230--235},
+    publisher = {AAAI Press}
+}
+
+@INPROCEEDINGS{related_31,
+    author = {Sebastian Rudolph},
+    title = {Exploring relational structures via FLE},
+    booktitle = {Conceptual Structures at Work: 12th International Conference on Conceptual Structures. Volume 3127 of LNCS},
+    year = {2004},
+    publisher = {Springer}
+}
