--- a/Seminar-LinkedData/src/related.tex
+++ b/Seminar-LinkedData/src/related.tex
@@ -12,7 +12,7 @@ description logic \cite{refinement1,refinement2,refinement3} and is used as desc
 CELOE.
 \\
 The starting point of (semi-)automatic ontology engineering was set by
-\cite{rleated_31}, a formal concept analysis was descibed in \cite{related_5}.
+\cite{related_31}, a formal concept analysis was descibed in \cite{related_5}.
 Another interesting approach is presented in \cite{related_relexo} which
 proposes to improve knowlege bases through relation exploration. It is
 implemented in the RELExO framework.
