--- a/Seminar-LinkedData/document.tex
+++ b/Seminar-LinkedData/document.tex
@@ -1,5 +1,6 @@
 \documentclass{acm_proc_article-sp}
 
+\newdef{example}{Example}
 \usepackage{color}
 \usepackage{listings}
 \def\mymathhyphen{{\hbox{-}}}
@@ -23,15 +24,15 @@ showstringspaces=false}
 
 \begin{document}
 
-\title{Semantic Enrichment in OWL Knowledge Bases}
+\title{Schema Enrichment in OWL Knowledge Bases}
 %\subtitle{[Extended Abstract]
 
 \numberofauthors{1} 
 \author{
 \alignauthor
 Tim Schmiedl\\
-       \affaddr{Student: Computer Science (M.Sc.) University Freiburg}\\
-       \affaddr{Sundgaualle 52 0107}\\
+       \affaddr{Department of Computer Science, University Freiburg}\\
+       \affaddr{Sundgaualle 52}\\
        \affaddr{73110 Freiburg}\\
        \email{timschmiedl@neptun.uni-freiburg.de}
 }
@@ -44,10 +45,9 @@ Tim Schmiedl\\
 
 
 % A category with the (minimum) three required fields
-%\category{H.4}{Information Systems Applications}{Miscellaneous}
+\category{H.2.3}{Languages}{Query languages}
 %A category including the fourth, optional field follows...
-%\category{D.2.8}{Software Engineering}{Metrics}[complexity measures,
-% performance measures]
+\category{I.2}{Learning}{Concept learning, Induction}
 
 \terms{Theory}
 
