--- a/Seminar-LinkedData/sigproc.bib
+++ b/Seminar-LinkedData/sigproc.bib
@@ -88,6 +88,12 @@
     year = {2008},
     publisher = {IEEE}
 }
+@INPROCEEDINGS{occam-razor,
+    author = {A Blumer and A Ehrenfeucht and D Haussler and M.K. Warmuth },
+    title = {Occams's razor},
+    booktitle = {In Readings in Machine Learning},
+    pages = {201--204},
+}
 
 @INPROCEEDINGS{related_5,
     author = {Franz Baader and Bernhard Ganter and Baris Sertkaya and Ulrike Sattler},
@@ -104,4 +110,13 @@
     booktitle = {Conceptual Structures at Work: 12th International Conference on Conceptual Structures. Volume 3127 of LNCS},
     year = {2004},
     publisher = {Springer}
+}
+
+@incollection{31,
+  title={Statistical schema induction},
+  author={V{\"o}lker, Johanna and Niepert, Mathias},
+  booktitle={The Semantic Web: Research and Applications},
+  pages={124--138},
+  year={2011},
+  publisher={Springer}
 }
