--- a/Seminar-LinkedData/src/conclusion.tex
+++ b/Seminar-LinkedData/src/conclusion.tex
@@ -1,6 +1,14 @@
 \section{Conclusions}
-- more
+The algorithms and methods summarized in this article like they were presented
+in \cite{paper1} and \cite{paper2} show promising results. The authors of
+\cite{paper1} analysed their CELOE algorithm with different heuristics and
+proved that approximating heuristic values are often very accurate while
+improving the performance significantly. The strong bias towards shorter
+expressions increase the readability of suggestions and help the knowlege
+engineer to verify additional statements. 
 
-- more
-
-- more
+The enrichment methods in \cite{paper2} also show great potential. The
+evaluation of this approached showed that the method also works on very large
+scales, like the size of the DBpedia knowlege base. In future works the authors
+will investigate enhancements in the presented methods and collaborate with the
+authors of \cite{31} to further fine-tune the approach.
