--- a/Seminar-LinkedData/src/main.tex
+++ b/Seminar-LinkedData/src/main.tex
@@ -38,6 +38,7 @@ knowledge base.\cite{paper2}
 %=====================================================================================
 %=====================================================================================
 %=====================================================================================
+\newpage
 \section{Class Learning}
 % Paper 1
 \subsection{Motivation}
@@ -45,7 +46,6 @@ The class learning approach is one method of enrichment of knowledge bases. It
 aims at finding new definition of classes to extend the semantic schema. For the
 motivation of the method consider the following example.
 
-\newdef{example}{Example}
 \begin{example}
 For this example consider a knowledge base containing a class \emph{President of
 the United States} with instance data like Abraham Lincoln, John F. Kennedy,
@@ -134,6 +134,7 @@ takesPartIn.Meeting$
 %=====================================================================================
 %=====================================================================================
 %=====================================================================================
+\newpage
 \section{Enrichment with OWL Axioms}
 % Paper 2
 OWL offers many different types of axioms for a method to enrich the knowledge
